# hangul

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
hangul/: __init__.py  assemble.py  chosung_includes.py  combine_hangul_character.py  constants.py  convert_qwerty_to_hangul_alphabet.py  disassemble.py  disassemble_complete_hangul_character.py  hangul_includes.py  josa.py  remove_last_hangul_character.py  utils.py
hangul/internal/: hangul.py  utils.py
tests/: test_assemble.py  test_chosung_includes.py  test_combine_hangul_character.py  test_convert_qwerty_to_hangul_alphabet.py  test_disassemble.py  test_disassemble_complete_hangul_character.py  test_hangul_includes.py  test_josa.py  test_remove_last_hangul_character.py  test_utils.py
tests/internal/: test_hangul.py
