[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hangul"]

[project]
name = "hangul"
version = "0.0.4"
authors = [{ name = "John Choi", email = "isnbh0@gmail.com" }]
description = "A Python port of the es-hangul JavaScript library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/isnbh0/hangul"
Issues = "https://github.com/isnbh0/hangul/issues"
